# taskmaster_v3

./: .ansible_vault_pass  .gitignore  .pre-commit-config.yaml  Pipfile  README  clean  clean.sh  install_env.bash  journal.txt  pre-commit-config.yaml  pyproject.toml  requirements.txt  start_program.sh  Технический журнал
.fleet/: run.json
.github/workflows/: test.yml
resources/: config.yml  ft_ls.yml  general.test  general.test2
src/: CommandHandler.py  ConfigManager.py  ProcessManager.py  a_daemon.py  b_parse_configs.py  c_params_validation.py  commandhandler.py  configmanager.py  configs.py  constants.py  create_processes.py  d_program.py  daemon.py  e_manager.py  exceptions.py  f_server.py  logger.py  main.py  manager.py  params_validation.py  parse_configs.py  parser.py  process.py  processmanager.py  server.py  taskmaster.py  taskmastershell.py  tasks.py
tests/: __init__.py
