[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Бехруз Касымов <behaqosimi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"
processmanager = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

